# L2

./: .gitignore  README.md  start_robot.sh
ai-sdlc/: agent-c.md  agent-i.md  agent-p.md  agent-r.md  load-context.md  new-task.md  sdlc-guide.md
log/: frames_2025-11-17_16.45.27.gv  mesh_http_server.pid
log/robot_driver/: robot_driver.pid
log/tf_tools/: robot_tf.pid  robot_tf_publisher.pid
src/camera/: README.md  (+3 more)
src/description/: description.md  package.xml  setup.cfg  setup.py  start_robot_desc.sh
src/description/config/: robot_description.txt  yam.xml
src/description/launch/: robot_desc.launch.py
src/description/meshes/: gripper_base_collision.stl  left_finger_visual.stl  right_finger_collision.stl
src/description/src/description/: asset_check.py  robot_desc_node.py
src/description/urdf/: yam.urdf  yam.urdf.bundle_backup  yam.urdf.gripper_backup
src/driver/: CMakeLists.txt  action_robot.md  gripper.md  optimized.md  package.xml  robot_description.yaml  robot_driver.md  safe_pose_build.sh  setup.cfg  setup.py  start_robot_driver.md  start_robot_driver.sh
src/driver/action/: GripperCommand.action  JointCommand.action  RobotCommand.action  SafetyPose.action
src/driver/config/: robot_driver_config.yaml  safe_pose_20251114_101804.yaml  safe_pose_20251114_104828.yaml  safe_pose_config.yaml  safe_pose_default.yaml
src/driver/launch/: robot_driver.launch.py
src/driver/msg/: JointCommandOptions.msg  JointCommandTarget.msg  JointContact.msg
src/driver/scripts/: cleanup_can_interface.sh  robot_driver_node.py
src/driver/src/driver/: __init__.py  can_interface_manager.py  command_watchdog.py  hardware_commander.py  joint_controler.py  logging_utils.py  motion_controller.py  parameter_schema.py  path_utils.py  robot_description_loader.py  robot_driver_node.py  safe_pose_loader.py  state_publisher.py
src/driver/src/driver/app/: __init__.py  gripper_action.py  hardware_supervisor.py  robot_driver_node.py
src/driver/src/driver/config/: __init__.py  parameter_schema.py  safe_pose_loader.py
src/driver/src/driver/control/: __init__.py  command_watchdog.py  end_effector_pose_publisher.py  joint_controler.py  motion_controller.py  state_publisher.py  zero_gravity_manager.py
src/driver/src/driver/hardware/: __init__.py  can_interface_manager.py  hardware_commander.py  kinematics_solver.py  robot_description_loader.py
src/driver/src/driver/safety/: __init__.py  safe_pose_executor.py  safe_pose_manager.py
src/driver/src/driver/tools/: __init__.py
src/driver/src/driver/utils/: __init__.py  logging_utils.py  path_utils.py
src/driver/srv/: SolveFK.srv  SolveIK.srv
src/driver/tests/: __init__.py  test_hardware_commander.py  test_parameter_schema.py  test_safe_pose_loader.py
src/perception/: CMakeLists.txt  grasp_action.md  package.xml  perception.md  setup.cfg  setup.py  start_perception.sh
src/perception/action/: ObjectProcess.action  ObjectRecord.action  ObjectTarget.action  PointCloud.action  Segment.action  Vectorize.action
src/perception/config/: perception_config.yaml  sam2_config.yaml
src/perception/launch/: perception.launch.py
src/perception/msg/: GraspCandidate.msg  ObjectInfo.msg  SampleInfo.msg
src/perception/scripts/: perception_node.py
src/perception/src/perception_core/: __init__.py  async_worker.py  constants.py  error_codes.py  grasp_module.py  node.py  object_storage_manager.py  pointcloud.py  sam2_engine.py  segmentation.py  vector_manager.py  vectorizer.py
src/perception/srv/: AddSample.srv  ClearAll.srv  DeleteObject.srv  DeleteSample.srv  GetStatus.srv  Grasp.srv  ListObjects.srv  ListSamples.srv  QueryByDesc.srv  QueryById.srv  QueryByImage.srv  QueryByLabel.srv  SaveObject.srv  UpdateObject.srv
src/perception/tests/: __init__.py  action_object_target_test.py  conftest.py  test_object_storage.py  test_pointcloud.py  test_segmentation.py  test_vector_manager.py  test_vectorizer.py
src/robot_skill/: CMakeLists.txt  package.xml  robot_grab.md  robot_skill.md  setup.cfg  setup.py  start_robot_skill.sh
src/robot_skill/action/: GraspRecord.action  GraspRecordEasy.action  SkillSequence.action
src/robot_skill/config/: robot_skill_config.yaml
src/robot_skill/launch/: robot_skill.launch.py
src/robot_skill/resource/: robot_skill
src/robot_skill/scripts/: robot_skill_node.py
src/robot_skill/skill_sets/: general_skill.yaml  record_object.yaml
src/robot_skill/src/robot_skill/: node.py  state_machine.py
src/robot_skill/src/robot_skill_core/: __init__.py  constants.py  grasp_executor.py  grasp_planner.py  node.py  robot_skill.py  simple_grasp_executor.py  skill_loader.py  step_executor.py
src/robot_skill/tests/: test_placeholder.py  test_skill_loader.py
src/tf_tools/: CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION.md  README.md  STRUCTURE.md  UNIFIED_TF.md  check_environment.sh  package.xml  requirements.md  robot_tf.md  start_robot_tf.sh  static_tf_config.yaml  static_tf_config_build.sh  static_tf_config_publish.sh  tf.md  tf_publisher.sh
src/tf_tools/.static_tf_publish/: pids
src/tf_tools/config/: tf_config.yaml
src/tf_tools/doc/: architecture.md  requirements.md
src/tf_tools/src/: dynamic_tf_publish.sh  robot_tf.py  robot_tf_publisher.py  transform_utils.py
src/tf_tools/srv/: TransformPoints.srv  TransformPoses.srv
src/web/: package.xml  setup.cfg  setup.py  web.md  webInteractiveGUI.sh
src/web/scripts/: web_interactive_gui_node.py
src/web/src/web_interactive_gui_core/: __init__.py  camera_manager.py  perception_client.py  robot_skill_client.py  web_gui.py  web_server.py
src/web/src/web_interactive_gui_core/templates/: interactive_viewer.html
src/web/web_interactive_gui/: package.xml  setup.py
src/web/web_interactive_gui/scripts/: web_interactive_gui_node.py
src/web/web_interactive_gui/src/web_interactive_gui_core/: __init__.py  web_node.py
src/web/web_interactive_gui/src/web_interactive_gui_core/templates/: interactive_viewer.html
src/web/web_interactive_gui/web_interactive_gui/: __init__.py  node.py
src/web/web_interactive_gui/web_interactive_gui/templates/: interactive_viewer.html
(+4 files in other folders)
