<?xml version="1.0"?>
<package format="3">
  <name>description</name>
  <version>0.1.0</version>
  <description>Robot description publisher package for the YAM manipulator.</description>
  <maintainer email="jetson@example.com">jetson</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf_parser_py</exec_depend>

  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
