<?xml version="1.0"?>
<package format="3">
  <name>robot_driver</name>
  <version>0.1.0</version>
  <description>Robot actuator driver node with CAN management, safety watchdog, and diagnostics.</description>
  <maintainer email="support@example.com">L2 Driver Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rclpy_action</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rclpy_execution</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
