<?xml version="1.0"?>
<package format="3">
  <name>web_interactive_gui</name>
  <version>0.1.0</version>
  <description>
    Reusable ROS 2 web interface for streaming camera images and publishing click interactions.
  </description>
  <maintainer email="maintainer@example.com">L2 Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>perception</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-flask-cors</exec_depend>
  <exec_depend>python3-flask-socketio</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
